[package]
name = "signal-not-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
futures-util = { version = "0.3.31", default-features = false }
presage = { git = "https://github.com/whisperfish/presage" }
presage-store-sled = { git = "https://github.com/whisperfish/presage" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["rt", "sync"] }

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
